# passveil

./: .boring  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  flake.nix  passveil-cabal.patch  passveil.cabal  passveil.nix
app/: Main.hs  PassVeil.hs
app/PassVeil/: Console.hs  Editor.hs  Exit.hs  Options.hs  Tree.hs
app/PassVeil/Command/: Allow.hs  Copy.hs  Delete.hs  Deny.hs  Distrust.hs  Edit.hs  Info.hs  Init.hs  Insert.hs  List.hs  Move.hs  Search.hs  Show.hs  Sync.hs  Undo.hs
contrib/bash/completions/: passveil.bash
contrib/fish/completions/: passveil.fish
contrib/zsh/completions/: _passveil
scripts/: passveil_unfuckup_dirty_repo
share/man/man1/: passveil.md
src/Data/: HexString.hs
src/PassVeil/: Store.hs
src/PassVeil/Store/: Cached.hs  Config.hs  Content.hs  Fingerprint.hs  Generator.hs  Gpg.hs  Hash.hs  Identity.hs  Index.hs  Key.hs  Log.hs  Metadata.hs  Path.hs  Payload.hs  Repository.hs  Timestamp.hs  Trust.hs  Uid.hs
