cabal-version: 3.6
name: passveil
version: 0.1.0.1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author: raichoo
maintainer: raichoo@googlemail.com
description:
  @passveil@ is a distributed password store using @gpg2@ for cryptography and
  @darcs@ for versioning and distribution.

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable passveil
    documentation: True
    ghc-options: -Wall -O2
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: aeson
                 , ansi-terminal
                 , base
                 , bytestring
                 , containers
                 , directory
                 , filepath
                 , haskeline
                 , mtl
                 , optparse-applicative
                 , passveil
                 , process
                 , regex-base
                 , regex-pcre
                 , temporary
                 , text
                 , time
                 , unix
                 , unordered-containers

    hs-source-dirs: app
    default-language: Haskell2010

    other-modules: PassVeil
                 , PassVeil.Command.Allow
                 , PassVeil.Command.Delete
                 , PassVeil.Command.Deny
                 , PassVeil.Command.Distrust
                 , PassVeil.Command.Edit
                 , PassVeil.Command.Info
                 , PassVeil.Command.Init
                 , PassVeil.Command.Insert
                 , PassVeil.Command.List
                 , PassVeil.Command.Move
                 , PassVeil.Command.Search
                 , PassVeil.Command.Show
                 , PassVeil.Command.Sync
                 , PassVeil.Command.Undo
                 , PassVeil.Console
                 , PassVeil.Editor
                 , PassVeil.Exit
                 , PassVeil.Options
                 , PassVeil.Tree
                 , Paths_passveil

library
    ghc-options: -Wall
    hs-source-dirs: src
    build-depends: aeson
                 , base
                 , base16-bytestring
                 , binary
                 , bytestring
                 , cryptohash-sha256
                 , directory
                 , filepath
                 , hashable
                 , megaparsec
                 , mtl
                 , process
                 , random
                 , text
                 , time
                 , unordered-containers

    exposed-modules: PassVeil.Store
                   , PassVeil.Store.Cached
                   , PassVeil.Store.Config
                   , PassVeil.Store.Content
                   , PassVeil.Store.Fingerprint
                   , PassVeil.Store.Generator
                   , PassVeil.Store.Gpg
                   , PassVeil.Store.Hash
                   , PassVeil.Store.Identity
                   , PassVeil.Store.Index
                   , PassVeil.Store.Key
                   , PassVeil.Store.Log
                   , PassVeil.Store.Metadata
                   , PassVeil.Store.Path
                   , PassVeil.Store.Payload
                   , PassVeil.Store.Repository
                   , PassVeil.Store.Timestamp
                   , PassVeil.Store.Trust
                   , PassVeil.Store.Uid
                   , Data.HexString
